# CMblCJl

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: experiment_metrics.json  knowledge_tracing_metrics.json  local_llm_eval.json  mission_benchmark.json  viva_semantic_metrics.json
data/: curriculum.json  demo_students.json  english_b2_assignments.json  english_b2_missions.json  english_b2_rules.json  grading_benchmark.json  viva_semantic_benchmark.json
docs/: ARCHITECTURE.md  CONCORDIA_SPIKE.md  CV_IVAN_SOROKOVYH_DRAFT.md  ML_EXPERIMENTS.md  MOTIVATION_LETTER_AI_TALENT_HUB.md  PITCH.md  RESEARCH_AND_ROADMAP.md  REUSE_AND_ATTRIBUTION.md
models/: README.md
scripts/: evaluate_grader.py  evaluate_knowledge_check_semantics.py  evaluate_knowledge_tracing.py  evaluate_missions.py  evaluate_viva_semantics.py  expand_assignment_bank.py  generate_submission_docs.py  run_concordia_local.py  run_experiment.py  run_local_llm_eval.py  setup_local_llm.ps1  setup_local_voice.ps1  smoke_local_voice.py
src/meaning_trainer/: __init__.py  artifact.py  bkt.py  cohort.py  database.py  grading.py  grammar.py  local_llm.py  missions.py  models.py  realtime.py  routing.py  rulebook.py  voice.py  voice_server.py
tests/: test_artifact.py  test_bkt.py  test_database.py  test_evaluator.py  test_experiments.py  test_grading.py  test_local_llm.py  test_missions.py  test_realtime.py  test_review.py  test_routing.py  test_viva.py  test_voice.py
(+23 files in other folders)
