[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meaning-adaptive-trainer"
version = "0.1.0"
description = "Evidence-based adaptive learning loop for heterogeneous university cohorts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "pydantic>=2.9,<3",
  "scikit-learn>=1.5,<2",
  "streamlit>=1.40,<2",
  "websockets>=15,<16",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.8,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
